//
//  AccessibilityIdentifier.swift
//  RickAndMortyWiki
//
//  Created by Beka Gelashvili on 15.01.24.
//

import Foundation

// MARK: - RF

struct AccessibilityIdentifier {
    static let characterDetailsView = "AccessibilityIdentifierCharacterDetailsView"
    static let searchField = "AccessibilityIdentifierSearchCharacters"
}
